--- a/kubernetes/kubernetes-client-core.cabal
+++ b/kubernetes/kubernetes-client-core.cabal
@@ -1,5 +1,5 @@
 name:           kubernetes-client-core
-version:        0.1.0.2
+version:        0.1.0.0
 synopsis:       Auto-generated kubernetes-client-core API Client
 description:    .
                 Client library for calling the Kubernetes API based on http-client.
@@ -8,7 +8,7 @@ description:    .
                 .
                 base path: http://localhost
                 .
-                Kubernetes API version: v1.16.2
+                Kubernetes API version: v1.18.3
                 .
                 OpenAPI version: 3.0.1
                 .
@@ -51,11 +51,11 @@ library
     , iso8601-time >=0.1.3 && <0.2.0
     , microlens >= 0.4.3 && <0.5
     , mtl >=2.2.1
-    , network >=2.6.2 && <2.9
+    , network >=2.6.2 && <3.9
     , random >=1.1
     , safe-exceptions <0.2
     , text >=0.11 && <1.3
-    , time >=1.5 && <1.10
+    , time (>=1.5 && <1.9) || (>=1.10 && <2.0)
     , transformers >=0.4.0.0
     , unordered-containers
     , vector >=0.10.9 && <0.13
@@ -76,8 +76,6 @@ library
       Kubernetes.OpenAPI.API.Apis
       Kubernetes.OpenAPI.API.Apps
       Kubernetes.OpenAPI.API.AppsV1
-      Kubernetes.OpenAPI.API.AppsV1beta1
-      Kubernetes.OpenAPI.API.AppsV1beta2
       Kubernetes.OpenAPI.API.Auditregistration
       Kubernetes.OpenAPI.API.AuditregistrationV1alpha1
       Kubernetes.OpenAPI.API.Authentication
@@ -103,11 +101,13 @@ library
       Kubernetes.OpenAPI.API.CoreV1
       Kubernetes.OpenAPI.API.CustomObjects
       Kubernetes.OpenAPI.API.Discovery
-      Kubernetes.OpenAPI.API.DiscoveryV1alpha1
+      Kubernetes.OpenAPI.API.DiscoveryV1beta1
       Kubernetes.OpenAPI.API.Events
       Kubernetes.OpenAPI.API.EventsV1beta1
       Kubernetes.OpenAPI.API.Extensions
       Kubernetes.OpenAPI.API.ExtensionsV1beta1
+      Kubernetes.OpenAPI.API.FlowcontrolApiserver
+      Kubernetes.OpenAPI.API.FlowcontrolApiserverV1alpha1
       Kubernetes.OpenAPI.API.Logs
       Kubernetes.OpenAPI.API.Networking
       Kubernetes.OpenAPI.API.NetworkingV1
